# neuralink-elite-compression

./: .gitignore  DEFINITIVE_BENCHMARK.md  PhD_Validation_Report.md  README.md  RESILIENCE_REPORT.md  SUBMISSION_EMAIL.md  SUBMISSION_MANIFEST.md  build.sh  chaos_test.py  final_benchmark.py  multipov_benchmark.py
chaos_testing/: base.elite.corrupt
multipov_results/: multipov_report.json
source/: Cargo.toml  run_uat.ps1
source/src/: coder.rs  lpc.rs  main.rs  simd_ops.rs  sparse.rs  spike.rs
source/tests/: batched.rs  multipov.rs
