[package]
name = "neuralink_compressor"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
hound = "3.5"
bitstream-io = "2.2"
byteorder = "1.4"
console = "0.15"
indicatif = "0.17"
crc32fast = "1.5.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
